ajoute map