@@ -11,7 +11,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <javafx.version>17.0.2</javafx.version>
+    <javafx.version>20</javafx.version>
   </properties>
 
   <dependencies>
@@ -36,7 +36,18 @@
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>${javafx.version}</version>
-      <classifier>win</classifier>
+
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
+      <version>20</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
     </dependency>
 
     <dependency>
@@ -44,6 +55,11 @@
       <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
       <classifier>win</classifier>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.10.0</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
@@ -102,6 +118,7 @@
             <includes>
                 <include>**/*.fxml</include>
                 <include>**/*.css</include>
+                <include>**/*.html</include>
                 <include>**/*.properties</include>
             </includes>
         </resource>
@@ -129,6 +146,12 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>com.example.auth.MainApp</mainClass>
+          <options>
+            <option>--add-opens=javafx.web/com.sun.webkit=ALL-UNNAMED</option>
+            <option>--add-opens=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>
+            <option>--add-opens=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>
+            <option>--add-exports javafx.web/com.sun.webkit.dom=ALL-UNNAMED</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
